# InsightFlowX

./: .gitignore  CHANGELOG.md  ISSUES.md  LICENSE  README.md  future-iterations.md  new.md  requirements.txt
backend/: .env.example  CHANGELOG.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/agents/: agent_utils.py  analysis_agent.py  base_agent.py  collection_agent.py  competitor_resolver.py  interview_agent.py  query_planner.py  report_agent.py  review_agent.py
backend/app/api/v1/: artifact.py  auth.py  event.py  interview.py  router.py  trace.py  workflow.py
backend/app/core/: competitive_template.py  graph_nodes.py  node_executor.py  orchestrator.py  pause_service.py  workflow_executor.py
backend/app/core/runtime/: context.py  (+6 more)
backend/app/db/: session.py
backend/app/schemas/: auth.py  competitor.py  competitor_role.py  decision.py  event.py  evidence.py  feature.py  gtm.py  positioning.py  pricing.py  report.py  review.py  runtime_state.py  search.py  workflow.py  workflow_state.py
backend/app/services/: auth_service.py  event_service.py  interview_service.py  rate_limiter.py  sse_service.py  workflow_service.py
backend/tests/: conftest.py  test_agent_utils.py  test_analysis_agent.py  test_collection_agent.py  test_exceptions.py  test_human_in_the_loop.py  test_interview_service.py  test_node_progress.py  test_report_agent.py  test_runtime_template.py  test_workflow_executor.py
backend/tests/test_api/: test_auth.py  test_interview.py  test_workflow.py
(+73 files in other folders)
